--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -91,8 +91,12 @@
     </div>
     <div class="spacer100vh"></div>
     <div class="footer">
-        <div style="float:right; color:white; font-size: 20px;">
-            <i class="fa-brands fa-square-github"></i>
+        <div style=" color:white; font-size: 20px; width: 100%;">
+                
+                <a href="https://github.com/Greg7519?tab=repositories" class="footerLinks">
+                    <i class="fa fa-github " style="margin: 20px; color: rgb(255, 255, 255)"></i>
+                </a>
+            
         </div>
     </div>
 
