--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Portfolio Page</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="stylesheet" href="/assets/stylesheets/style.css">
     <script src="https://kit.fontawesome.com/7ca439eefa.js" crossorigin="anonymous"></script>
-    <script defer src="../scripts/onScroll.js"></script>
-    <script defer src="../scripts/hideBlur.js"></script>
-    <script defer src="../scripts/animBlur.js"></script>
+    <script defer src="/assets/scripts/onScroll.js"></script>
+    <script defer src="/assets/scripts/hideBlur.js"></script>
+    <script defer src="/assets/scripts/animBlur.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body >
@@ -80,7 +80,7 @@
     <div class="split Left" style="padding: 0; overflow: hidden;">
         
         
-        <div class="bgImg" style="background-image: url(../assets/images/business.jpg); margin: 0;"></div>
+        <div class="bgImg" style="background-image: url(/assets/images/business.jpg); margin: 0;"></div>
         <div class="blurAnim blurCont" ></div>
         <div class="centered"  style="filter: blur(0);">
             <a class="visitBtn hidden" style="background-color: rgb(255, 98, 0);"  href = "https://chartgeneratorfree.netlify.app/">
