--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -68,7 +68,7 @@
             </a>
         </div>
     </div>
-    <!-- <div class="spacer100vh"></div> -->
+    <div class="spacer100vh"></div>
     <div class="split Right orange">
         <div class="centered">
             <h1 style="color: white;" class="projHeader hidden">Chart generator</h1>
