fixed mobile not having proper height

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="spacer100vh"></div>
     <div class="footer">
-        <div style=" color:white; font-size: 20px; width: 100%;">
+        <div style=" color:white; font-size: 20px; width: 100vw;">
                 
                 <a href="https://github.com/Greg7519?tab=repositories" class="footerLinks">
                     <i class="fa fa-github " style="margin-right: 40px; color: rgb(255, 255, 255)"></i>
