changed background, as well as added about page, first version of portfolio is finished

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Page</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/stylesheets/index.css">
+ 
     <script src="https://kit.fontawesome.com/7ca439eefa.js" crossorigin="anonymous"></script>
     <script defer src="/assets/scripts/onScroll.js"></script>
     <script defer src="/assets/scripts/hideBlur.js"></script>
@@ -61,12 +61,14 @@
     </div>
    
     <div class="split Left  gray ">
-        
-        <div class="centered">
-            <h1 class="projHeader hidden">Nebrion:The simple chat app</h1>
-            <div class="spacer20per"></div>
-            <h2 class="projSubheader hidden">Chat with your loved ones</h2>
+        <div class="bgImgWave">
+            <div class="centered">
+                <h1 class="projHeader hidden">Nebrion:The simple chat app</h1>
+                <div class="spacer20per"></div>
+                <h2 class="projSubheader hidden">Chat with your loved ones</h2>
+            </div>
         </div>
+       
     </div>
     <div class="respSpacer"></div>
     <div class="split scrollableRight Right" >
@@ -81,6 +83,7 @@
     </div>
     <div class="spacer100vh"></div>
     <div class="split Right orange">
+        <div class="bgImg" style="background-image: url(/assets/images/low-poly-grid-haikei.svg);"></div>
         <div class="centered">
             <h1  class="projHeader hidden">Chart generator</h1>
             <div class="spacer20per"></div>
