--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Page</title>
     <link rel="stylesheet" href="/assets/stylesheets/index.css">
- 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+        </style>
     <script src="https://kit.fontawesome.com/7ca439eefa.js" crossorigin="anonymous"></script>
     <script defer src="/assets/scripts/onScroll.js"></script>
     <script defer src="/assets/scripts/hideBlur.js"></script>
