added some information

--- a/htmlPages/about.html
+++ b/htmlPages/about.html
@@ -61,7 +61,7 @@
                         <h3 style="color: white;">Gregory Panagiotis Angelopoulos</h3>
                         <h1 style="color: white;">Software engineer, passionate about technology</h1>
                         <p style="color: rgb(255, 68, 0);">Studying in computer and engineering and informatics department<br> university of Patras(2024-)
-
+                            <br>Interested in: <br>web development<br> software development
                         </p>
                     </div>
                 </div>
