added typewriting animation

--- a/htmlPages/about.html
+++ b/htmlPages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About page</title>
     <script src="https://kit.fontawesome.com/7ca439eefa.js" crossorigin="anonymous"></script>
+    <script defer src="/assets/scripts/typewrite.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
         </style>
@@ -57,9 +58,12 @@
                 </div>
                
                 <div class="textBg">
-                    <div class="logoText" style="font-family: Anton, sans-serif; font-weight: 400; text-transform: uppercase; letter-spacing: 2px;">
+                    <div class="logoText">
                         <h3 style="color: white;">Gregory Panagiotis Angelopoulos</h3>
-                        <h1 style="color: white;">Software engineer, passionate about technology</h1>
+                        <div class="animated-text" >
+                            <h1 style="color: white;" id="headerEng"></h1>
+                        </div>
+                       
                         <p style="color: rgb(255, 68, 0);">Studying in computer and engineering and informatics department<br> university of Patras(2024-)
                             <br>Interested in: <br>web development<br> software development
                         </p>
