fixed some screen resizing issues

--- a/htmlPages/about.html
+++ b/htmlPages/about.html
@@ -61,14 +61,14 @@
                
                 <div class="textBg">
                     <div class="logoText">
-                        <h3 style="color: white;">Gregory Panagiotis Angelopoulos</h3>
+                        <h3 class="hidden" style="color: white">Grigorios Panagiotis Angelopoulos</h3>
                         <div class="animated-text" >
                             <div style=" display: inline;color: white;position: relative; font-size: xx-large;" id="headerEng">
                                 <span id="cursor"></span>
                             </div>
                         </div>
                        
-                        <p style="color: rgb(255, 68, 0);">Studying in computer and engineering and informatics department<br> university of Patras(2024-)
+                        <p  class= "hidden" style="color: rgb(255, 68, 0);">Studying in computer and engineering and informatics department<br> university of Patras(2024-)
                             <br>Interested in: <br>web development<br> software development
                         </p>
                     </div>
