--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -10,7 +10,7 @@
         </style>
     <script src="https://kit.fontawesome.com/7ca439eefa.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
-    <script type="module" defer src="/assets/scripts/typewrite.js"></script>
+    <script  defer src="/assets/scripts/typewrite.js"></script>
     <script   defer src="/assets/scripts/onScroll.js"></script>
     <script defer src="/assets/scripts/hideBlur.js"></script>
     <script defer src="/assets/scripts/animBlur.js"></script>
