added fade left to github icon fixed issue with typewriter

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -111,7 +111,7 @@
     <div class="footer">
         <div class= "footerLinksCont">
                 
-                <a href="https://github.com/Greg7519?tab=repositories" class="footerLinks">
+                <a href="https://github.com/Greg7519?tab=repositories" class="footerLinks hidden leftAnim">
                     <i class="fa fa-github footerIcon" ></i>
                 </a>
             
