added effect to footer

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -112,7 +112,7 @@
         <div class= "footerLinksCont">
                 
                 <a href="https://github.com/Greg7519?tab=repositories" class="footerLinks hidden leftAnim">
-                    <i class="fa fa-github footerIcon" ></i>
+                    <i class="fa fa-github footerIcon" style="text-decoration: none;" ></i>
                 </a>
             
         </div>
