--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -110,11 +110,17 @@
     </div>
     <div class="spacer100vh"></div>
     <div id="ContactForm">
-        <form>
+        <form id="form">
             <label for="fname">
 
             </label>
-            <input id="fname" type="text" placeholder="Your name">
+            <input id="fname" type="text" placeholder="Your name:">
+            <label for="email">
+
+            </label>
+            <input id="fname" type="text" placeholder="Your email:">
+            <label for="subject"></label>
+            <textarea id="subject" type="text" placeholder="Your message(You can also contact at greg.angeloppulos@outlook.com):" style="min-height: 200px;"></textarea>
         </form>
     </div>
     <div class="footer" id="footer">
