finished frontend contact form

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -121,6 +121,13 @@
             <input id="fname" type="text" placeholder="Your email:">
             <label for="subject"></label>
             <textarea id="subject" type="text" placeholder="Your message(You can also contact at greg.angeloppulos@outlook.com):" style="min-height: 200px;"></textarea>
+            <button class=" visitBtn submitBtn">
+               <span> Submit</span>
+            </button>
+            <div id="backCont">
+                <i class="fa-solid fa-arrow-left " id="backIcon" ></i>
+            </div>
+           
         </form>
     </div>
     <div class="footer" id="footer">
