--- a/htmlPages/about.html
+++ b/htmlPages/about.html
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                        
-                        <p  class= "hidden leftAnim" style="color: rgb(255, 68, 0); position: relative;">Studying in computer and engineering and informatics department<br> university of Patras(2024-)
+                        <p  class= "hidden leftAnim" style="color: rgb(255, 68, 0); position: relative;">Studying in computer engineering and informatics department<br> university of Patras(2024-)
                             <br>Interested in: <br>web development<br> software development
                         </p>
                     </div>
