--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -89,7 +89,7 @@
     </div>
     <div class="spacer100vh"></div>
     <div class="split Right orange">
-        <div class="bgImg" style="background-image: url(/assets/images/low-poly-grid-haikei.svg);"></div>
+        <div class="bgImg infScroll" style="background-image: url(/assets/images/low-poly-grid-haikei.svg);"></div>
         <div class="centered">
             <h1  class="projHeader leftAnim hidden">Chart generator</h1>
             <div class="spacer20per"></div>
@@ -100,7 +100,7 @@
     <div class="split Left">
         
         
-        <div class="bgImg chartGenImg "></div>
+        <div class="bgImg chartGenImg  animateInfScroll"></div>
         <div class="blurAnim blurCont" ></div>
         <div class="centered">
             <a class="visitBtn rightAnim orange hidden" href = "https://chartgeneratorfree.netlify.app/">
