fixed issue in template as well

--- a/htmlPages/projects/nebrion.html
+++ b/htmlPages/projects/nebrion.html
@@ -109,7 +109,7 @@
         </div>
         
     </div>
-    <div class="spacer100vh "></div>
+    <div class="spacer100vh hideResp "></div>
     <div class="split infScroll Right bgImg"  style="background-image: url(/assets/images/low-poly-grid-haikei.svg);">
 
         <div class="centered">
@@ -130,7 +130,7 @@
         
         </div>
     </div>
-    <div class="spacer100vh"></div>
+    <div class=" hideResp spacer100vh "></div>
     <div id="ContactForm">
         <form id="form">
             <label for="fname">
