--- a/htmlPages/projects/template.html
+++ b/htmlPages/projects/template.html
@@ -94,7 +94,7 @@
             
         </div>
     </div>
-    <div class="spacer100vh"></div>
+    <div class="spacer100vh   hideResp"></div>
     <div class="split infScroll Right bgImg"  style="background-image: url(/assets/images/low-poly-grid-haikei.svg);">
 
         <div class="centered">
@@ -114,7 +114,7 @@
         
         </div>
     </div>
-    <div class="spacer100vh"></div>
+    <div class="spacer100vh   hideResp"></div>
     <div id="ContactForm">
         <form id="form">
             <label for="fname">
