--- a/htmlPages/projects/nebrion.html
+++ b/htmlPages/projects/nebrion.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
     <script  defer src="/assets/scripts/onScroll.js"></script>
    
-  
+    <script defer src="/assets/scripts/handleChanges.js"></script>
     <script defer src="/assets/scripts/textAnim.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
