--- a/htmlPages/projects/chartgen.html
+++ b/htmlPages/projects/chartgen.html
@@ -57,9 +57,9 @@
             <a href="/htmlPages/about.html" style="float: right;">About</a>
             </div>
        
-            <div class="centered" style="position: relative;">
+            <div class="centered">
                 <h1 class= "orangeTextShadow" id="mainHeader" style="font-size: 3em;"></h1> 
-                <a class="visitBtn leftAnim hidden" style="background-color: none;" href = "https://nebrion.netlify.app/">
+                <a class="visitBtn bottomAnim hidden" style="background-color: orangered;" href = "https://chartgeneratorfree.netlify.app/chart_gen">
                     <span>Click to visit</span>
                 </a>
             </div>
