--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -18,6 +18,14 @@
     <script defer src="/assets/scripts/handleChanges.js"></script>
     <script defer src="/assets/scripts/textAnim.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/"
+          }
+        }
+    </script>
 </head>
 <body >
     <div class="preloader">
@@ -155,6 +163,7 @@
         </div>
     </div>
     <script src="/assets/scripts/typewrite.js"></script>
+    <script src="/assets/scripts/earth.js" type="module"></script>
     <script src="/assets/scripts/preloader.js"></script> 
     <script src="/assets/scripts/svgAnim.js"></script> 
     
