--- a/htmlPages/projects/nebrion.html
+++ b/htmlPages/projects/nebrion.html
@@ -171,6 +171,9 @@
         </div>
     </div>
     <script src="/assets/scripts/typewrite.js"></script>
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
     <script src="/assets/scripts/email.js"></script>
     <script type="text/javascript">
         (function(){
