fixed with animation on preloader previous issues

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -75,9 +75,9 @@
         </svg>
         <div >
             <div class="centered">
-                <h1 class="projHeader rightAnim hidden whiteTextShadow" >Nebrion:The simple chat app</h1>
+                <h1 class="projHeader rightAnim hidden" >Nebrion:The simple chat app</h1>
                 <div class="spacer20per"></div>
-                <h2 class="projSubheader rightAnim hidden  whiteTextShadow">Chat with your loved ones</h2>
+                <h2 class="projSubheader rightAnim hidden">Chat with your loved ones</h2>
             </div>
         </div>
        
