removed shadow effects

--- a/htmlPages/projects/chartgen.html
+++ b/htmlPages/projects/chartgen.html
@@ -77,11 +77,11 @@
         </svg>
         <div >
             <div class="centered">
-                <h1 class="projHeader rightAnim hidden whiteTextShadow" >Chart generator free</h1>
+                <h1 class="projHeader rightAnim hidden " >Chart generator free</h1>
                 <div class="spacer20per"></div>
-                <h2 class="projSubheader rightAnim hidden  whiteTextShadow">Features:</h2>
-                <h3 class="projSubheader rightAnim hidden  whiteTextShadow">Form to enter chart data</h3>
-                <h3 class="projSubheader rightAnim hidden  whiteTextShadow">Average value from chart data</h3>
+                <h2 class="projSubheader rightAnim hidden ">Features:</h2>
+                <h3 class="projSubheader rightAnim hidden">Form to enter chart data</h3>
+                <h3 class="projSubheader rightAnim hidden">Average value from chart data</h3>
             </div>
         </div>
        
