--- a/htmlPages/projects/template.html
+++ b/htmlPages/projects/template.html
@@ -76,9 +76,9 @@
         </svg>
         <div >
             <div class="centered">
-                <h1 class="projHeader rightAnim hidden whiteTextShadow" >Enter header here</h1>
+                <h1 class="projHeader rightAnim hidden " >Enter header here</h1>
                 <div class="spacer20per"></div>
-                <h2 class="projSubheader rightAnim hidden  whiteTextShadow">Enter details here</h2>
+                <h2 class="projSubheader rightAnim hidden  ">Enter details here</h2>
             </div>
         </div>
        
