--- a/htmlPages/projects/nebrion.html
+++ b/htmlPages/projects/nebrion.html
@@ -87,11 +87,11 @@
         </svg>
         <div >
             <div class="centered">
-                <h1 class="projHeader rightAnim hidden whiteTextShadow" >Nebrion Chat App</h1>
+                <h1 class="projHeader rightAnim hidden " >Nebrion Chat App</h1>
                 <div class="spacer20per"></div>
-                <h2 class="projSubheader rightAnim hidden  whiteTextShadow"  >Features:</h2>
-                <h3 class="projSubheader rightAnim hidden  whiteTextShadow" >User authentication</h2>
-                <h3 class="projSubheader rightAnim hidden  whiteTextShadow">Group and personal chat</h2>
+                <h2 class="projSubheader rightAnim hidden  "  >Features:</h2>
+                <h3 class="projSubheader rightAnim hidden " >User authentication</h2>
+                <h3 class="projSubheader rightAnim hidden  ">Group and personal chat</h2>
                 
             </div>
         </div>
