fixed issue on mobile(having 2d version)

--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -34,6 +34,7 @@
     </div>
     <div id="startOfPage" >
         <div class="blurDiv" id="startBlur"></div> 
+        <h1 class="mainHeader whiteTextShadow" id="mainHeader" ></h1> 
         <div class="navbarTop" >
             <a class="active" href="index.html">
                 Home
