--- a/htmlPages/about.html
+++ b/htmlPages/about.html
@@ -46,6 +46,7 @@
             <div class="dropdown-content">
                 <a href = "projects/nebrion.html">Nebrion</a>
                 <a href = "projects/chartgen.html">Chart Generator free</a>
+                <a href = "projects/organify.html">Organify</a>
             </div>
         </div>
                 
