--- a/htmlPages/projects/chartgen.html
+++ b/htmlPages/projects/chartgen.html
@@ -47,6 +47,7 @@
                     <div class="dropdown-content">
                         <a href = "nebrion.html">Nebrion</a>
                         <a href = "chartgen.html">Chart Generator free</a>
+                        <a href="organify.html">Organify</a>
                     </div>
             </div>
                     
