--- a/htmlPages/projects/nebrion.html
+++ b/htmlPages/projects/nebrion.html
@@ -49,6 +49,7 @@
                     <div class="dropdown-content">
                         <a href = "nebrion.html">Nebrion</a>
                         <a href = "chartgen.html">Chart Generator free</a>
+                        <a href="organify.html">Organify</a>
                     </div>
               
             </div>
