--- a/htmlPages/index.html
+++ b/htmlPages/index.html
@@ -130,7 +130,7 @@
     </div>
     <div class="respSpacer"></div>
     <div class="split scrollableRight Right" >
-        <div class="bgImg" style="background-image: url(/assets/images/organify.jpg);"></div>
+        <div class="bgImg" style="background-image: url(/assets/images/computer.jpg);"></div>
         <div class="blurAnim blurCont" ></div>
         
         <div class="centered">
