small text for responsiveness on template headers

--- a/htmlPages/projects/organify.html
+++ b/htmlPages/projects/organify.html
@@ -59,7 +59,7 @@
             <a href="/htmlPages/about.html" style="float: right;">About</a>
             </div>
        
-            <div class="centered">
+            <div class="centered" style="position: relative;">
                 <h1 class= "orangeTextShadow" id="mainHeader" style="font-size: 3em;"></h1> 
                 <a class="visitBtn bottomAnim hidden" style="background-color: orangered;" href = "https://organify.onrender.com/">
                     <span>Click to visit</span>
