--- a/htmlPages/projects/template.html
+++ b/htmlPages/projects/template.html
@@ -98,7 +98,7 @@
     <div class="spacer100vh   hideResp"></div>
     <div class="split infScroll Right bgImg"  style="background-image: url(/assets/images/low-poly-grid-haikei.svg);">
 
-        <div class="centered">
+        <div class="centered" style="position: relative;">
             <h1  class="projHeader leftAnim hidden">Enter another header here</h1>
             <div class="spacer20per"></div>
             <h2  class="projSubheader leftAnim hidden">Enter more details here</h2>
