updated link to organify project

--- a/htmlPages/projects/organify.html
+++ b/htmlPages/projects/organify.html
@@ -61,7 +61,7 @@
        
             <div class="centered" style="position: relative;">
                 <h1 class= "orangeTextShadow" id="mainHeader" style="font-size: 2em;"></h1> 
-                <a class="visitBtn bottomAnim hidden" style="background-color: orangered;" href = "https://organify.onrender.com/">
+                <a class="visitBtn bottomAnim hidden" style="background-color: orangered;" href = "https://organify.inteliseis.gr/">
                     <span>Click to visit</span>
                 </a>
             </div>
