updated organify technologies

--- a/htmlPages/projects/organify.html
+++ b/htmlPages/projects/organify.html
@@ -108,7 +108,8 @@
             <h2  class="projSubheader leftAnim hidden">MongoDB for storing data</h2>
             <h2  class="projSubheader leftAnim hidden">NodeJS + express for backend operations</h2>
             <h2  class="projSubheader leftAnim hidden">Tailwind + vanilla css for styling</h2>
-            <h2  class="projSubheader leftAnim hidden">Render for deployment</h2>
+            <h2  class="projSubheader leftAnim hidden">Deployed using custom domain on IIS 10</h2>
+             <h2  class="projSubheader leftAnim hidden">Secured by sectigo TLS certificate installed by myself</h2>
         </div>
     </div>
     <div class="respSpacer  hideResp"></div>
