minor description update

--- a/htmlPages/projects/organify.html
+++ b/htmlPages/projects/organify.html
@@ -109,7 +109,7 @@
             <h2  class="projSubheader leftAnim hidden">NodeJS + express for backend operations</h2>
             <h2  class="projSubheader leftAnim hidden">Tailwind + vanilla css for styling</h2>
             <h2  class="projSubheader leftAnim hidden">Deployed using custom domain on IIS 10</h2>
-             <h2  class="projSubheader leftAnim hidden">Secured by sectigo TLS certificate installed by myself</h2>
+             <h2  class="projSubheader leftAnim hidden">Secured by sectigo TLS certificate installed</h2>
         </div>
     </div>
     <div class="respSpacer  hideResp"></div>
